Added job name and job args to job view

--- a/rqmonitor/static/nunjucks/job_info.html
+++ b/rqmonitor/static/nunjucks/job_info.html
@@ -1,7 +1,8 @@
 <div class="card">
     <div class="card-body">
         <h4 class="card-title">{{ job_data.job_id }}</h4>
-        <p class="card-text">{{ job_data.job_description }}</p>
+        <p class="card-text">Name: {{ job_data.job_name }}</p>
+        <p class="card-text">Arguments: {{ job_data.job_args }}</p>
     </div>
     <ul class="list-group list-group-flush">
         <li class="list-group-item d-flex justify-content-between">
